# jira-report

./: .gitignore  config.py  main.py  pyproject.toml
src/: main.py
src/config/: local.py
