[tool.poetry]
name = "jiraweeklyreporter"
version = "0.1.0"
description = "Platform Security Team JIRA Weekly Reporter"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jira = "^3.1.1"
pandas = "^1.3.4"
XlsxWriter = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
